--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="promotion">
           <p>
             <h2><span>Interesuję Cię</span> cennik i charakterystyka poszczególnych strzyżeń? Sprawdź zakładkę <br></h2>
-            <a href="uslugi.html" target="_blank" class="usluga">Usługi</a>
+            <a href="services.html" target="_blank" class="usluga">Usługi</a>
           </p>
         </section>
         <section class="our-services">
