add call-able link to each html file

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <ul>
                 <h3>Kontakt</h3>
                 <li><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></li>
-                <li><img src="icons/telephone.png" class="footer-icon"><span>+48 601 601 601</span></li>
+                <li><img src="icons/telephone.png" class="footer-icon"><span><a href="tel:+48609349103">609 349 103</a></span></li>
                 <li><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99@gmail.com</span></li>
               </ul>
             </div>
