--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
                 </li>
                 <li>
                   <img src="icons/telephone.png" class="footer-icon" /><span
-                    >+48 601 601 601</span
+                    ><a href="tel:+48609349103">609 349 103</a></span
                   >
                 </li>
                 <li>
