add mobile version of about-us

--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Kristi&family=Kumbh+Sans:wght@300;400;500&family=Libre+Baskerville:wght@400;700&family=Poppins:wght@500;600&family=Source+Serif+4:ital,opsz@1,8..60&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500&family=Libre+Baskerville:wght@400;700&family=Poppins:wght@500;600&family=Source+Serif+4:ital,opsz@1,8..60&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -36,43 +44,140 @@
         </div>
       </div>
     </header>
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="footer-column">
-            <ul>
-              <h3>Kontakt</h3>
-              <li><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></li>
-              <li><img src="icons/telephone.png" class="footer-icon"><span><a href="tel:+48609349103">609 349 103</a></span></li>
-              <li><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99@gmail.com</span></li>
-            </ul>
-          </div>
-          <div class="footer-column">
-            <h3>Godziny otwarcia</h3>
-            <ul>
-              <li>Poniedziałek: 11:00 - 19:00<br></li>
-              <li>Wtorek: 09:00 - 17:00<br></li>
-              <li>Środa: 09:00 - 17:00<br></li>
-              <li>Czwartek: 11:00 - 19:00<br></li>
-              <li>Piątek: 12:00 - 20:00<br></li>
-              <li>Sobota: 09:00 - 17:00<br></li>
-              <li>Niedziela: nieczynne<br></li>
-            </ul>
-          </div>
-          <div class="footer-column">
-            <h3>Obserwuj nas</h3>
-            <ul>
-              <a href="https://www.facebook.com/profile.php?id=100093480534630" target="_blank"><img src="icons/facebook.png" class="follow-icon"> </a>
-              <a href="https://www.instagram.com/golibroda_barbershop/?igshid=MzRlODBiNWFlZA%3D%3D&fbclid=IwAR3osT0hefR2XiRcmOOPeTXakkgLGWxyiZpIelZqGJl1OzgiYZVqMAZ45aM" target="_blank"><img src="icons/instagram.png" class="follow-icon"> </a>
-            </ul>
-          </div>
-          <div class="footer-column">
-              <p class="copyright"> Copyright ©2023 All rights reserved</p>
+    <section class="wrapper">
+      <div class="title">
+        <h1>
+          Golibroda Barbershop<br />
+          <span>Tradycyjna Męska Fryzjeria z Klasą</span>
+        </h1>
+      </div>
+      <section class="main-content">
+        <div class="section-heading">
+          <h2>Poznaj Golibroda Barbershop</h2>
+        </div>
+        <div class="main-content_text">
+          <p>
+            Golibroda Barbershop to miejsce założone przez dwie przyjaciółki,
+            które znają się od najmłodszych lat. Razem dorastałyśmy i
+            dzieliłyśmy pasję do pielęgnacji męskich fryzur, aż pewnego dnia
+            zdecydowałyśmy się na wspólne założenie naszego salonu. Uważamy, że
+            to, co wyróżnia Golibroda Barbershop spośród innych miejsc, to nasza
+            więź i przyjaźń, która stanowi fundament tego miejsca. Nasi klienci
+            nie są dla nas tylko klientami, ale także integralną częścią naszej
+            Golibroda rodziny. Dlatego też kładziemy ogromny nacisk na
+            indywidualne podejście do klienta, a charakterystyczną cechą naszego
+            salonu jest przyjacielska, rodzinna atmosfera.
+          </p>
+        </div>
+      </section>
+      <section class="promotion">
+        <h2>Nie czekaj, zadzwoń i umów się na wizytę już teraz!<br /></h2>
+        <a href="tel:+48609349103">609 349 103</a>
+      </section>
+      <section class="our-team">
+        <div class="section-title">
+          <h1>Zespół</h1>
+        </div>
+        <div class="member-of-the-team-photo-container">
+          <img src="zdjecia/aga-photo.jpg" class="member-of-the-team-picture" />
+        </div>
+        <div class="member-of-the-team">
+          <h2 class="member-name">Agnieszka</h2>
+        </div>
+        <div class="about-member">
+          <p>
+            Jestem współzałożycielką Golibroda Barbershop, od dawna fascynuje
+            się światem męskiej stylizacji i sztuki barberingu. Już w wieku
+            14lat wiedziałam kim chcę zostać w przyszłości, dlatego już podczas
+            mojej szkolnej edukacji zaczęłam strzyc członków rodziny i
+            przyjaciół. Pierwsze kroki jako barber stawiałam w Warszawie, gdzie
+            pod czujnym okiem doświadczonych specjalistów doskonaliłam swoje
+            umiejętności. Nie przestawałam się rozwijać, uczestnicząc w licznych
+            kursach barberskich. Następnym moim krokiem było rozpoczęcie
+            strzyżenia na własny rachunek dlatego wraz z Katarzyną
+            zdecydowałyśmy się na otworzenie tego miejsca.
+          </p>
+        </div>
+        <div class="member-of-the-team-photo-container">
+          <img
+            src="zdjecia/katarzyna-photo.jpg"
+            class="member-of-the-team-picture member-of-the-team-picture-2"
+          />
+        </div>
+        <div class="member-of-the-team">
+          <h2 class="member-name">Katarzyna</h2>
+        </div>
+        <div class="about-member">
+          <p>
+            Jestem drugą z założycielek Golibroda Barbershop, a moje
+            zainteresowanie włosami, ich modelowaniem i pielęgnacją sięga
+            dzieciństwa. Dlatego, gdy przyszła pora wyboru ścieżki zawodowej,
+            decyzja była oczywista. Jak większość początkujących barberów,
+            rozpoczynałam od strzyżenia osób z mojego najbliższego otoczenia. Z
+            biegiem czasu i zwiększającymi się umiejętnościami oraz liczbą
+            klientów, moje marzenie o otwarciu własnego salonu zaczęło nabierać
+            realnych kształtów i wraz z Agnieszką zdecydowałyśmy się przekuć je
+            w rzeczywistość.
+          </p>
+        </div>
+      </section>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="footer-column">
+              <ul>
+                <h3>Kontakt</h3>
+                <li>
+                  <img src="icons/point.png" class="footer-icon" /><span
+                    >ul. Wesoła 19 Janów Lubelski</span
+                  >
+                </li>
+                <li>
+                  <img src="icons/telephone.png" class="footer-icon" /><span
+                    ><a href="tel:+48609349103">609 349 103</a></span
+                  >
+                </li>
+                <li>
+                  <img src="icons/email.png" class="footer-icon" /><span
+                    >Golibroda_barbershop99@gmail.com</span
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3>Godziny otwarcia</h3>
+              <ul>
+                <li>Poniedziałek: 11:00 - 19:00<br /></li>
+                <li>Wtorek: 09:00 - 17:00<br /></li>
+                <li>Środa: 09:00 - 17:00<br /></li>
+                <li>Czwartek: 11:00 - 19:00<br /></li>
+                <li>Piątek: 12:00 - 20:00<br /></li>
+                <li>Sobota: 09:00 - 17:00<br /></li>
+                <li>Niedziela: nieczynne<br /></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3>Obserwuj nas</h3>
+              <ul>
+                <a
+                  href="https://www.facebook.com/profile.php?id=100093480534630"
+                  target="_blank"
+                  ><img src="icons/facebook.png" class="follow-icon" />
+                </a>
+                <a
+                  href="https://www.instagram.com/golibroda_barbershop/?igshid=MzRlODBiNWFlZA%3D%3D&fbclid=IwAR3osT0hefR2XiRcmOOPeTXakkgLGWxyiZpIelZqGJl1OzgiYZVqMAZ45aM"
+                  target="_blank"
+                  ><img src="icons/instagram.png" class="follow-icon" />
+                </a>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <p class="copyright">Copyright ©2023 All rights reserved</p>
+            </div>
           </div>
         </div>
-       </div>
-    </footer> 
-    </div> 
+      </footer>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
