add media queries on larger screens

--- a/about-us.html
+++ b/about-us.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500&family=Libre+Baskerville:wght@400;700&family=Poppins:wght@500;600&family=Source+Serif+4:ital,opsz@1,8..60&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Great+Vibes&family=Kristi&family=Kumbh+Sans:wght@300;400;500&family=Libre+Baskerville:wght@400;700&family=Montserrat:ital,wght@0,500;1,400;1,500&family=Poppins:wght@500;600&family=Satisfy&family=Source+Serif+4:ital,opsz@1,8..60&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -76,49 +80,54 @@
       </section>
       <section class="our-team">
         <div class="section-title">
-          <h1>Zespół</h1>
+          <h1>Nasz zespół</h1>
         </div>
-        <div class="member-of-the-team-photo-container">
-          <img src="zdjecia/aga-photo.jpg" class="member-of-the-team-picture" />
-        </div>
+
         <div class="member-of-the-team">
-          <h2 class="member-name">Agnieszka</h2>
+          <div class="member-of-the-team-photo-container">
+            <img
+              src="zdjecia/aga-photo.jpg"
+              class="member-of-the-team-picture"
+            />
+          </div>
+          <div class="about-member">
+            <h2 class="member-name">Agnieszka</h2>
+            <p>
+              Jestem współzałożycielką Golibroda Barbershop, od dawna fascynuje
+              się światem męskiej stylizacji i sztuki barberingu. Już w wieku
+              14lat wiedziałam kim chcę zostać w przyszłości, dlatego już
+              podczas mojej szkolnej edukacji zaczęłam strzyc członków rodziny i
+              przyjaciół. Pierwsze kroki jako barber stawiałam w Warszawie,
+              gdzie pod czujnym okiem doświadczonych specjalistów doskonaliłam
+              swoje umiejętności. Nie przestawałam się rozwijać, uczestnicząc w
+              licznych kursach barberskich. Następnym moim krokiem było
+              rozpoczęcie strzyżenia na własny rachunek dlatego wraz z Katarzyną
+              zdecydowałyśmy się na otworzenie tego miejsca.
+            </p>
+          </div>
         </div>
-        <div class="about-member">
-          <p>
-            Jestem współzałożycielką Golibroda Barbershop, od dawna fascynuje
-            się światem męskiej stylizacji i sztuki barberingu. Już w wieku
-            14lat wiedziałam kim chcę zostać w przyszłości, dlatego już podczas
-            mojej szkolnej edukacji zaczęłam strzyc członków rodziny i
-            przyjaciół. Pierwsze kroki jako barber stawiałam w Warszawie, gdzie
-            pod czujnym okiem doświadczonych specjalistów doskonaliłam swoje
-            umiejętności. Nie przestawałam się rozwijać, uczestnicząc w licznych
-            kursach barberskich. Następnym moim krokiem było rozpoczęcie
-            strzyżenia na własny rachunek dlatego wraz z Katarzyną
-            zdecydowałyśmy się na otworzenie tego miejsca.
-          </p>
-        </div>
-        <div class="member-of-the-team-photo-container">
-          <img
-            src="zdjecia/katarzyna-photo.jpg"
-            class="member-of-the-team-picture member-of-the-team-picture-2"
-          />
-        </div>
+
         <div class="member-of-the-team">
-          <h2 class="member-name">Katarzyna</h2>
-        </div>
-        <div class="about-member">
-          <p>
-            Jestem drugą z założycielek Golibroda Barbershop, a moje
-            zainteresowanie włosami, ich modelowaniem i pielęgnacją sięga
-            dzieciństwa. Dlatego, gdy przyszła pora wyboru ścieżki zawodowej,
-            decyzja była oczywista. Jak większość początkujących barberów,
-            rozpoczynałam od strzyżenia osób z mojego najbliższego otoczenia. Z
-            biegiem czasu i zwiększającymi się umiejętnościami oraz liczbą
-            klientów, moje marzenie o otwarciu własnego salonu zaczęło nabierać
-            realnych kształtów i wraz z Agnieszką zdecydowałyśmy się przekuć je
-            w rzeczywistość.
-          </p>
+          <div class="member-of-the-team-photo-container">
+            <img
+              src="zdjecia/katarzyna-photo.jpg"
+              class="member-of-the-team-picture member-of-the-team-picture-2"
+            />
+          </div>
+          <div class="about-member">
+            <h2 class="member-name">Katarzyna</h2>
+            <p>
+              Jestem drugą z założycielek Golibroda Barbershop, a moje
+              zainteresowanie włosami, ich modelowaniem i pielęgnacją sięga
+              dzieciństwa. Dlatego, gdy przyszła pora wyboru ścieżki zawodowej,
+              decyzja była oczywista. Jak większość początkujących barberów,
+              rozpoczynałam od strzyżenia osób z mojego najbliższego otoczenia.
+              Z biegiem czasu i zwiększającymi się umiejętnościami oraz liczbą
+              klientów, moje marzenie o otwarciu własnego salonu zaczęło
+              nabierać realnych kształtów i wraz z Agnieszką zdecydowałyśmy się
+              przekuć je w rzeczywistość.
+            </p>
+          </div>
         </div>
       </section>
       <footer>
