create gallery and make imgs clickable

--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,32 @@
         </div>
       </div>
     </header>
+    <section class="gallery">
+        <div class="gallery__content-container">
+          <ul class="gallery__list">
+            <li class="gallery__thumbnail"><img src="gallery_content/1.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/2.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/3.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/4.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/5.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/6.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/7.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/8.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/9.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/10.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/11.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/12.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/13.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/14.jpg" alt=""></li>
+          </ul>
+        </div>
+        <div class="popup hidden">
+          <button class="popup__close">X</button>
+          <img src="gallery_content/1.jpg" alt="" class="popup__img">
+        </div>
+        <div class="dzialaj-pls">
+        </div>
+    </section>
     <footer>
       <div class="container">
         <div class="row">
@@ -74,5 +100,6 @@
     </footer>
     </div> 
     <script src="main.js"></script>
+    <script src="gallery.js"></script>
   </body>
 </html>
