add left/right arrows to thumbnails

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,9 @@
         </div>
         <div class="popup hidden">
           <button class="popup__close">X</button>
-          <img src="gallery_content/1.jpg" alt="" class="popup__img">
+          <img src="" alt="" class="popup__img">
+          <button class="popup__arrow popup__arrow--left">&#60;</button>
+          <button class="popup__arrow  popup__arrow--right">&#62;</button>
         </div>
         <div class="dzialaj-pls">
         </div>
