add scripts directory

--- a/about-us.html
+++ b/about-us.html
@@ -187,6 +187,6 @@
         </div>
       </footer>
     </section>
-    <script src="main.js"></script>
+    <script src="scripts/global.js"></script>
   </body>
 </html>
