--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="picture-container"> 
             <img
               src="main-page-photos/about-us-photo.jpg"
-              class="abt-us-photo"
+              class="abt-us-photo section-img"
             />
           </div>
           <div class="about-us-text">
@@ -70,7 +70,7 @@
           <div class="picture-container">
             <img
               src="main-page-photos/opalanie-uszu.jpg"
-              class="our-services-photo"/>
+              class="our-services-photo section-img"/>
           </div>
           <div class="about-us-text">
           <p>
@@ -89,7 +89,7 @@
           <div class="picture-container">
             <img
               src="main-page-photos/auto.jpg"
-              class="for-kids-photo"/>
+              class="for-kids-photo section-img"/>
           </div>
           <div class="about-us-text">
             <p>
@@ -97,7 +97,12 @@
               W odróżnieniu od wielu innych barberów, oprócz mężczyzn, strzyżemy także dzieci. Z doświadczenia wiemy, jaki stres towarzyszy najmłodszym w tego typu wizytach, dlatego mamy dla nich specjalnie przygotowany auto-fotelik który ma na celu zajęcie uwagi  oraz sprawić wiele radości Waszej pociesze, podczas gdy my wykonujemy usługę.
             </p>
           </div>
+          <div class="popup hidden">
+            <button class="popup__close">X</button>
+            <img src="" alt="" class="popup__img">
+          </div>
         </section>
+        
       <footer>
         <div class="container">
           <div class="row">
@@ -135,6 +140,7 @@
          </div>
       </footer>  
     </section> 
-    <script src="main.js"></script>
+    <script src="scripts/global.js"></script>
+    <script src="scripts/homepage.js"></script>
   </body>
 </html>
