--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,6 @@
        </div>
     </footer>
     </div> 
-    <script src="main.js"></script>
+    <script src="scripts/global.js"></script>
   </body>
 </html>
