--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,7 @@
        </div>
     </footer>
     </div> 
-    <script src="main.js"></script>
-    <script src="gallery.js"></script>
+    <script src="scripts/global.js"></script>
+    <script src="scripts/gallery.js"></script>
   </body>
 </html>
