--- a/services.html
+++ b/services.html
@@ -214,6 +214,6 @@
         </div>
       </footer>
     </section>
-    <script src="main.js"></script>
+    <script src="scripts/global.js"></script>
   </body>
 </html>
