change thumbnailes class

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           <h1>GOLIBRODA BARBERSHOP</h1>
         </div>
         <section class="about-us">
-          <div class="picture-container"> 
+          <div class="thumbnail-container"> 
             <img
               src="main-page-photos/about-us-photo.jpg"
-              class="abt-us-photo section-img"
+              class="thumbnail section-img"
             />
           </div>
           <div class="about-us-text">
@@ -67,10 +67,10 @@
           </p>
         </section>
         <section class="our-services">
-          <div class="picture-container">
+          <div class="thumbnail-container">
             <img
               src="main-page-photos/opalanie-uszu.jpg"
-              class="our-services-photo section-img"/>
+              class="thumbnail section-img"/>
           </div>
           <div class="about-us-text">
           <p>
@@ -86,10 +86,10 @@
           </p>
         </section>
         <section class="for-kids">
-          <div class="picture-container">
+          <div class="thumbnail-container">
             <img
               src="main-page-photos/auto.jpg"
-              class="for-kids-photo section-img"/>
+              class="thumbnail section-img"/>
           </div>
           <div class="about-us-text">
             <p>
