add photos to gallery and change margins

--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,8 @@
             <li class="gallery__thumbnail"><img src="gallery_content/12.jpg" alt=""></li>
             <li class="gallery__thumbnail"><img src="gallery_content/13.jpg" alt=""></li>
             <li class="gallery__thumbnail"><img src="gallery_content/14.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/15.jpg" alt=""></li>
+            <li class="gallery__thumbnail"><img src="gallery_content/16.jpg" alt=""></li>
           </ul>
         </div>
         <div class="popup hidden">
